v0.3.7

* [BGBUILD-276] Import files into appliance via appliance definition file (Files section)

v0.3.6

* [BGBUILD-295] Remove arbitrary 4 CPU limit
* [BGBUILD-296] BG should refer to version and release when building new appliances

v0.3.5

* [BGBUILD-273] Move to RSpec2
* [BGBUILD-275] default_repos setting is not included in schema and is not documented

v0.3.4

* Version bump.

v0.3.3

* [BGBUILD-233] BoxGrinder Build fails to report a missing config file

v0.3.2

* [BGBUILD-210] In Fedora 14 parameters are not being expanded, and cause early string truncation.
* [BGBUILD-208] Kickstart files not working with 0.9.1
* [BGBUILD-218] Incorrect error messages since revision of parser/validator

v0.3.1

* [BGBUILD-164] Guestfs writes to /tmp/ by default, potentially filling the root filesystem
* [BGBUILD-97] some filesystems dont get unmounted on BG interruption
* [BGBUILD-155] Images built on Centos5.x (el5) for VirtualBox kernel panic (/dev/root missing)
* [BGBUILD-190] Allow to specify kernel variant (PAE or not) for Fedora OS
* [BGBUILD-192] Use IO.popen4 instead open4 gem on JRuby
* [BGBUILD-198] root password is not inherited
* [BGBUILD-156] Validate appliance definition files early and return meaningful error messages

v0.3.0

* [BGBUILD-178] Remove sensitive data from logs
* [BGBUILD-168] Support deprecated package inclusion format in appliance definitions

v0.2.1

* [BGBUILD-142] Backtraces make output unreadable - add option to enable them, and disable by default
* [BGBUILD-150] Cyclical inclusion dependencies in appliance definition files are not detected/handled

v0.2.0

* [BGBUILD-133] Support a consolidated configuration file
* [BGBUILD-68] Global .boxgrinder/config or rc style file for config
* [BGBUILD-127] Use appliance definition object instead of a file when using BG as a library
* [BGBUILD-79] Allow to use BoxGrinder Build as a library
* [BGBUILD-93] Add Red Hat Enterprise Linux 6 support