@@ -1,6 +1,7 @@
 v0.3.7
 
 * [BGBUILD-276] Import files into appliance via appliance definition file (Files section)
+* [BGBUILD-305] Incorrect version information in 0.9.6 schema causing validation errors
 
 v0.3.6
 
